--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         </label>
         <!-- <input style="margin-top:1em;"type='file' id='getval' /> -->
         <input type="file" class="btn js-loadfile" value="Upload" />
-        <div class="btn js-reset">Reset</div>
-        <div class="btn js-crop">Lock</div>
+        <div class="btn js-reset">Reset<i class="fa fa-undo" aria-hidden="true"></i></div>
+        <div class="btn js-crop">Lock<i class="fa fa-lock" aria-hidden="true"></i></div>
       </div>
       <div class="" style="padding-top:1em;">
         <span style="padding:0.2em;">Font color</span><br/>
