--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 </head>
 <body onload="reset();">
-  <div class="full-head" id = 'hide' style="width:100%;background:rgba(0,0,0,1);">
+  <div class="full-head" id = 'hide' style="width:100%;background:rgba(255,255,255,1);">
    <div class="row">
       <div class="large-12 columns" style="padding-top:50px;background:rgba(0,0,0,0);z-index:20;">
         <ul class="button-group even-4" >
@@ -37,8 +37,8 @@
         <label for="getval">
         </label>
         <input type="file" class="btn js-loadfile" value="Upload" />
-        <div class="btn js-reset">Reset<i class="fa fa-undo" aria-hidden="true"></i></div>
-        <div class="btn js-crop">Lock<i class="fa fa-lock" aria-hidden="true"></i></div>
+        <div class="btn js-reset">Reset<i class="fa fa-undo space" aria-hidden="true"></i></div>
+        <div class="btn js-crop">Lock<i class="fa fa-lock space" aria-hidden="true"></i></div>
       </div>
       <div class="" style="padding-top:1em;">
         <span style="padding:0.2em;">Font color</span><br/>
